ETL script complete

--- a/ETL/ETL_Notebook.ipynb
+++ b/ETL/ETL_Notebook.ipynb
@@ -3195,7 +3195,7 @@
     }
    ],
    "source": [
-    "schools_df"
+    "schools_df\n"
    ]
   },
   {
@@ -3706,7 +3706,8 @@
     "# info_df\n",
     "# teams_df\n",
     "# combine_table_df\n",
-    "# draft_table_df"
+    "# draft_table_df\n",
+    "# schools_df"
    ]
   },
   {
@@ -3743,8 +3744,9 @@
     "info_table_df['Height'] = pd.to_numeric(info_table_df['Height'], errors='coerce')\n",
     "#com_df_final['Ht'].convert_dtypes(infer_objects=True, convert_string=True)\n",
     "info_table_df['Weight'] = pd.to_numeric(info_table_df['Height'], errors='coerce')\n",
+    "info_table_df['position'] = info_table_df['position'].convert_dtypes(infer_objects=True, convert_string=True)\n",
     "\n",
-    "info_table_df"
+    "info_table_df.info()"
    ]
   },
   {
@@ -3755,6 +3757,9 @@
    "source": [
     "teams_table_df = pd.merge(teams_df, player_id_df, how = 'inner', on = 'name')\n",
     "teams_table_df = info_table_df.drop(columns = 'name')\n",
+    "\n",
+    "teams_table_df['NFL_Team'] = teams_table_df['position'].convert_dtypes(infer_objects=True, convert_string=True)\n",
+    "\n",
     "teams_table_df"
    ]
   },
@@ -3769,11 +3774,11 @@
     "\n",
     "# Convert\n",
     "##### The columns names needs to be changed\n",
-    "combine_df_final['40yd'] = pd.to_numeric(combine_df_final['40yd'], errors='coerce')\n",
+    "combine_df_final['Forty_Yard'] = pd.to_numeric(combine_df_final['Forty_Yard'], errors='coerce')\n",
     "combine_df_final['Bench'] = pd.to_numeric(combine_df_final['Bench'], errors='coerce')\n",
     "combine_df_final['Vertical'] = pd.to_numeric(combine_df_final['Vertical'], errors='coerce')\n",
-    "combine_df_final['Broad Jump'] = pd.to_numeric(combine_df_final['Broad Jump'], errors='coerce')\n",
-    "combine_df_final['3Cone'] = pd.to_numeric(combine_df_final['3Cone'], errors='coerce')\n",
+    "combine_df_final['Broad_Jump'] = pd.to_numeric(combine_df_final['Broad Jump'], errors='coerce')\n",
+    "combine_df_final['Three_Cone'] = pd.to_numeric(combine_df_final['Three_Cone'], errors='coerce')\n",
     "combine_df_final['Shuttle'] = pd.to_numeric(combine_df_final['Shuttle'], errors='coerce')\n",
     "# Get the info of the dataframe\n",
     "combine_df_final.info()\n",
@@ -3813,8 +3818,8 @@
     "\n",
     "# # Convert types to fit in the database\n",
     " \n",
-    "draft_df_final['Rnd'] = pd.to_numeric(draft_df_final['Rnd'], errors='coerce')\n",
-    "draft_df_final['Pick_no'] = pd.to_numeric(draft_df_final['Rnd'], errors='coerce')\n",
+    "draft_df_final['Round'] = pd.to_numeric(draft_df_final['Round'], errors='coerce')\n",
+    "draft_df_final['Pick_no'] = pd.to_numeric(draft_df_final['Pick_no'], errors='coerce')\n",
     "# draft_df_final['Pick_no'].convert_dtypes(infer_objects=True, convert_integer=True)\n",
     "draft_df_final['Conf'] = draft_df_final['Conf'].convert_dtypes(infer_objects=True, convert_string=True)\n",
     "\n",
@@ -3829,7 +3834,13 @@
    "outputs": [],
    "source": [
     "schools_df_final = pd.merge(schools_df, player_id_df, how='inner', on='player')\n",
-    "schools_df_final = schools_df_final.drop(columns = 'name')"
+    "\n",
+    "schools_df_final = schools_df_final.drop(columns = 'name')\n",
+    "\n",
+    "schools_df_final['School'] = schools_df_final['School'].convert_dtypes(infer_objects=True, convert_string=True)\n",
+    "schools_df_final['Conf'] = schools_df_final['Conf'].convert_dtypes(infer_objects=True, convert_string=True)\n",
+    "\n",
+    "schools_df_final.info()"
    ]
   },
   {
